--- a/src/app/pages/layout/components/header/header.component.scss
+++ b/src/app/pages/layout/components/header/header.component.scss
@@ -21,16 +21,9 @@
         height: 100% !important;
     }
 
-    .content-container-xs {
-        width: 100% !important;
-        height: 100% !important;
-        z-index: 0;
-    }
-
     .header {
         width: 100% !important;
         height: 100% !important;
-        padding: 0px 30px !important;
         background-color: $main-color!important;
     }
 
@@ -39,14 +32,24 @@
         height: 100% !important;
     }
 
+    .header-views-lt-md{
+        width: auto !important;
+        height: 46% !important;
+    }
+
+    .header-views-xl{
+        width: 320px !important;
+        height: 100% !important;
+    }
+
     .image-container{
         width: 200px !important;
         height: 98% !important;
     }
 
-    .image-container-xs{
-        width: 150px !important;
-        height: 98% !important;
+    .image-container-lt-md{
+        width: 130px !important;
+        height: 46% !important;
     }
 
     .image {
@@ -59,9 +62,7 @@
         };
     }
 
-    .header-search {
-        width: 480px !important;
-        height: 40px !important;
+    .search {
         padding-left: 8px !important;
         background-color: white !important;
         border-bottom-left-radius: 25px !important;
@@ -70,12 +71,32 @@
         border-top-right-radius: 25px !important;
     }
 
+    .header-search {
+        width: 480px !important;
+        height: 40px !important;
+    }
+
+    .header-search-lt-md {
+        width: 100% !important;
+        height: 40px !important;
+    }
+
+    .header-search-md {
+        width: 400px !important;
+        height: 40px !important;
+    }
+
+    .header-search-xl {
+        width: 700px !important;
+        height: 50px !important;
+    }
+
     input {
         width: 94% !important;
         height: 100% !important;
         padding: 0 0 0 4px !important;
         border: none !important;
-        font-size: 16px !important;
+        font-size: 17px !important;
         border-bottom-right-radius: 25px !important;
         border-top-right-radius: 25px !important;
 
@@ -99,18 +120,33 @@
     
     .mat-icon {
         color: #2e2a2a !important;
+    }
+
+    .icon-search {
         width: 22px !important;
         height: 22px !important;
         font-size: 22px !important;
     }
 
-    .text-xs {
+    .icon-search-xs {
+        width: 14px !important;
+        height: 14px !important;
         font-size: 14px !important;
+    }
+
+    .text-xs {
+        font-size: 12px !important;
+        font-weight: 500 !important;
     }
 
     .icon-social {
         width: 32px !important;
         height: 32px !important;
+    }
+
+    .icon-social-xl {
+        width: 50px !important;
+        height: 50px !important;
     }
 
     .w-200p {
