--- a/src/app/pages/layout/views/layout.component.html
+++ b/src/app/pages/layout/views/layout.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-    <div class="header-container mat-elevation-z4">
+    <div class="header mat-elevation-z4"
+         ngClass="header-container"
+         ngClass.lt-md="header-container-lt-md"
+         ngClass.xl="header-container-xl">
         <app-header></app-header>
     </div>
     <div>
