--- a/src/app/pages/movies/views/home-movies/home-movies.component.scss
+++ b/src/app/pages/movies/views/home-movies/home-movies.component.scss
@@ -3,18 +3,129 @@
 :host ::ng-deep {
     .container {
         width: 100% !important;
-        height: 450px !important;
+        height: auto !important;
+        padding-bottom: 24px !important;
         background-color: #161518 !important;
     }
 
     .poster {
         width: 100% !important;
-        height: 100% !important;
+        height: 450px !important;
         position: relative;
+        
+        .h-450p {
+            height: 450px !important;
+        }
+        
         img {
             top: 0 !important;
             width: 100%;
             height: 100%;
+            border-radius: 0px !important;
+        }
+
+        h2 {
+            font-size: 2.5rem !important;
+            position: absolute;
+            bottom: 60% !important;
+            left: 6% !important;
+            z-index: 100 !important;
+            color: white;
+        }
+
+        span {
+            font-size: .8rem;
+            position: absolute;
+            bottom: 58% !important;
+            left: 6% !important;
+            color: white;
+        }
+
+        button {
+            position: absolute;
+            width: 160px !important;
+            height: 34px !important;
+            bottom: 26% !important;
+            border-radius: 3px !important;
+            left: 6% !important;
+            z-index: 100 !important;
+            background-color: white;
+            border: none;
+            cursor: pointer;
+
+            span {
+                font-size: 14px !important;
+                font-weight: 500 !important;
+            }
+        }
+    }
+
+    .poster-lt-md {
+        width: 100% !important;
+        height: 300px !important;
+        position: relative;
+        
+        .h-480p {
+            height: 300px !important;
+        }
+        
+        img {
+            top: 0 !important;
+            width: 100%;
+            height: 100%;
+            border-radius: 0px !important;
+        }
+
+        h2 {
+            font-size: 2.5rem !important;
+            position: absolute;
+            bottom: 60% !important;
+            left: 6% !important;
+            z-index: 100 !important;
+            color: white;
+        }
+
+        span {
+            font-size: .8rem;
+            position: absolute;
+            bottom: 58% !important;
+            left: 6% !important;
+            color: white;
+        }
+
+        button {
+            position: absolute;
+            width: 160px !important;
+            height: 34px !important;
+            bottom: 26% !important;
+            border-radius: 3px !important;
+            left: 6% !important;
+            z-index: 100 !important;
+            background-color: white;
+            border: none;
+            cursor: pointer;
+
+            span {
+                font-size: 14px !important;
+                font-weight: 500 !important;
+            }
+        }
+    }
+
+    .poster-xs {
+        width: 100% !important;
+        height: 260px !important;
+        position: relative;
+        
+        .h-480p {
+            height: 260px !important;
+        }
+        
+        img {
+            top: 0 !important;
+            width: 100%;
+            height: 100%;
+            border-radius: 0px !important;
         }
 
         h2 {
@@ -69,34 +180,23 @@
         bottom: 30% !important;
     }
 
-    .mt-126 {
-        margin-top: 126px !important;
-    }
-
     h3 {
-        padding-left: 60px !important;
         color: white !important;
-        font-size: 18px !important;
         margin-bottom: 6px !important;
     }
 
     .movies-most-acclaimed {
         width: 100% !important;
-        height: 450px !important;
         margin-top: 16px !important;
         background-color: #161518 !important;
 
         h3 {
             padding: 0px !important;
             color: white !important;
-            font-size: 22px !important;
-            margin-bottom: 22px !important;
         }
     }
 
     .most-acclaimed {
-        width: 220px;
-        height: 340px;
         border-radius: 5px;
         background-color: #161518 !important;
 
@@ -108,6 +208,51 @@
                 transition: all ease-in-out 0.2s;
             }
         }
+    }
+
+    .most-acclaimed-size {
+        width: 220px !important;
+        height: 340px !important;
+    }
+
+    .most-acclaimed-size-sm {
+        width: 160px !important;
+        height: 240px !important;
+        margin: 0px 0px 16px 16px !important;
+        
+        @media only screen and (min-width: 600px) and (max-width: 749px) {
+            &:nth-child(2n + 1) {
+                margin-left: 0px !important;
+            }
+        }
+
+        @media only screen and (min-width: 750px) and (max-width: 900px) {
+            &:first-child {
+                margin-left: 0px !important;
+            }
+        }
+    }
+
+    .most-acclaimed-size-xs {
+        width: 130px !important;
+        height: 200px !important;
+        margin: 0px 0px 14px 14px !important;
+
+        &:nth-child(2n + 1) {
+            margin-left: 0px !important;
+        }
+    }
+
+    .w-350p {
+        width: 350px !important;
+
+        @media only screen and (min-width: 750px) and (max-width: 959px) {
+            width: 100% !important;
+        }
+    }
+
+    .w-275p {
+        width: 275px !important;
     }
 
     .loading-image {
@@ -122,4 +267,100 @@
         border-radius: 5px !important;
     }
 
+
+    @media only screen and (min-width: 600px) and (max-width: 959px) {
+        .mb-120 {
+            margin-bottom: 100px !important;
+        }
+    }
+
+    @media only screen and (min-width: 460px) and (max-width: 599px) {
+        .mb-120 {
+            margin-bottom: 80px !important;
+        }
+    }
+
+    @media only screen and (min-width: 441px) and (max-width: 459px) {
+        .mb-120 {
+            margin-bottom: 75px !important;
+        }
+    }
+
+    @media only screen and (min-width: 431px) and (max-width: 440px) {
+        .mb-120 {
+            margin-bottom: 65px !important;
+        }
+    }
+
+    @media only screen and (min-width: 421px) and (max-width: 430px) {
+        .mb-120 {
+            margin-bottom: 58px !important;
+        }
+    }
+
+    @media only screen and (min-width: 411px) and (max-width: 420px) {
+        .mb-120 {
+            margin-bottom: 50px !important;
+        }
+    }
+
+    @media only screen and (min-width: 401px) and (max-width: 410px) {
+        .mb-120 {
+            margin-bottom: 45px !important;
+        }
+    }
+
+    @media only screen and (min-width: 391px) and (max-width: 400px) {
+        .mb-120 {
+            margin-bottom: 40px !important;
+        }
+    }
+
+    @media only screen and (min-width: 381px) and (max-width: 390px) {
+        .mb-120 {
+            margin-bottom: 35px !important;
+        }
+    }
+
+    @media only screen and (min-width: 371px) and (max-width: 380px) {
+        .mb-120 {
+            margin-bottom: 30px !important;
+        }
+    }
+
+    @media only screen and (min-width: 361px) and (max-width: 370px) {
+        .mb-120 {
+            margin-bottom: 25px !important;
+        }
+    }
+
+    @media only screen and (min-width: 351px) and (max-width: 360px) {
+        .mb-120 {
+            margin-bottom: 20px !important;
+        }
+    }
+
+    @media only screen and (min-width: 341px) and (max-width: 350px) {
+        .mb-120 {
+            margin-bottom: 15px !important;
+        }
+    }
+
+    @media only screen and (min-width: 331px) and (max-width: 340px) {
+        .mb-120 {
+            margin-bottom: 10px !important;
+        }
+    }
+
+    @media only screen and (min-width: 321px) and (max-width: 330px) {
+        .mb-120 {
+            margin-bottom: 8px !important;
+        }
+    }
+
+    @media only screen and (max-width: 320px) {
+        .mb-120 {
+            margin-bottom: 0px !important;
+        }
+    }
 }
