--- a/src/app/pages/movies/views/tv-series-details/tv-series-details.component.html
+++ b/src/app/pages/movies/views/tv-series-details/tv-series-details.component.html
@@ -1,14 +1,26 @@
 <div fxLayout="column"
-     fxLayoutAlign="center center"
+     fxLayoutAlign="start center"
      fxLayoutGap="26px"
-     class="container"
+     fxLayoutGap.lt-md="0px"
+     class="container w-100"
      *ngIf="!spinner">
-    <div class="detail"
-         fxLayout="row">
-        <div class="w-50"
-             fxLayout="row"
-             fxLayoutAlign="center center">       
+     <div ngClass="details"
+          ngClass.sm="details-sm"
+          ngClass.xs="details-xs"
+          fxLayout="row"
+          fxLayout.sm="row wrap"
+          fxLayoutAlign="center start"
+          fxLayout.md="row"
+          fxLayout.xs="column"
+          fxLayoutGap.xs="6px">
+          <div ngClass="w-50"
+               ngClass.xs="w-100 h-100"
+               ngClass.sm="h-100 mb-10"
+               fxLayout="row"
+               fxLayoutAlign="center center">          
             <div ngClass="image-details"
+                 ngClass.xs="image-details-xs"
+                 ngClass.sm="image-details-sm"
                  class="mat-elevation-z2"
                  fxLayout="column"
                  fxLayoutAlign="center center">
@@ -25,25 +37,35 @@
             </div>
         </div>
         <div ngClass="w-50 p-50"
+             ngClass.xs="info-xs"
+             ngClass.sm="info-sm"
              fxLayout="column"
              fxLayoutAlign="start start"
-             fxLayoutGap="12px">
-            <h2>{{movie.original_name}}</h2>
-            <h3 *ngIf="movie.tagline" class="tagline">"{{movie.tagline}}"</h3>
+             fxLayoutGap="12px"
+             fxLayoutGap.xs="8px">
+            <h2 ngClass="text-42"
+                ngClass.xs="text-28">
+                {{movie.original_name}}
+            </h2>
+            <h3 *ngIf="movie.tagline" 
+                class="tagline"
+                ngClass="text-18">
+                "{{movie.tagline}}"</h3>
             <div class="category default"
                  fxLayout="row"
                  fxLayoutAlign="center center"
                  *ngIf="movie.in_production">
                 <span>in broadcast</span>
             </div>
-            <p>
+            <p ngClass.xs="text-13">
                 {{movie.overview}}
             </p>
             <div>
                 <span *ngIf="movie.in_production">First air date: {{movie.first_air_date}} </span>
                 <span *ngIf="!movie.in_production">Last air date: {{movie.last_air_date}}</span>
             </div>
-            <div class="w-80"
+            <div ngClass="w-80"
+                 ngClass.xs="w-100"
                  fxLayout="row wrap"
                  fxLayoutGap="8px">
                 <div *ngFor="let category of movie.genres"
@@ -72,8 +94,10 @@
             </div>
         </div>
     </div>
-    <div class="movies-similar">
-        <h3>
+    <div ngClass="movies-similar"
+         ngClass.lt-md="movies-similar-xs">
+        <h3 ngClass="text-22"
+            ngClass.xs="text-18">
             Movies similar
         </h3>
         <app-carousel [movies]="movies"
