--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -14,21 +14,23 @@
             height: 155px !important;
         }
 
-        .item-carousel {
-            background: $background-color !important;
-            border-radius: 8px !important;
-            cursor: pointer;
+    }
 
+    .item-carousel {
+        background: $background-color !important;
+        border-radius: 8px !important;
+        cursor: pointer;
+
+        .image-carousel {
+            width: 100% !important;
+            height: 100% !important;
+            border-radius: 8px !important;
+        }
+
+        &:hover {
             .image-carousel {
-                height: 100% !important;
-                border-radius: 8px !important;
-            }
-    
-            &:hover {
-                .image-carousel {
-                    border: 3px solid white !important;
-                    transition: all ease-in-out 0.1s;
-                }
+                border: 3px solid white !important;
+                transition: all ease-in-out 0.1s;
             }
         }
     }
