:feature: footer feat(Footer) Create footer

--- a/src/app/pages/layout/views/layout.component.html
+++ b/src/app/pages/layout/views/layout.component.html
@@ -8,4 +8,13 @@
     <div>
         <router-outlet></router-outlet>
     </div>
+    <div class="w-100 h-50p back text-center pointer"
+         fxLayout="row"
+         fxLayoutAlign="center center"
+         (click)="scroll()">
+        <span class="pointer">Back to top</span>
+    </div>
+    <div class="w-100">
+        <app-footer></app-footer>
+    </div>
 </div>
