--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,12 @@ html, body {
     margin: 0;
 }
 
+span, p, h1, h2, h3, h4, h5 {
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    color: white !important;
+}
+
+//WIDTH
 .w-100 {
     width: 100% !important;
 }
@@ -32,8 +38,21 @@ html, body {
     width: 60% !important;
 }
 
+//HEIGHT
 .h-100 {
     height: 100% !important;
+}
+
+.h-420p {
+    height: 420px !important;
+}
+
+.h-300p {
+    height: 300px !important;
+}
+
+.h-50p {
+    height: 50px !important;
 }
 
 //Padding
@@ -83,11 +102,11 @@ html, body {
     margin-bottom: 5px !important;
 }
 
-span, p, h1, h2, h3, h4, h5 {
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
-    color: white !important;
+.mt-5 {
+    margin-top: 5px !important;
 }
 
+//TEXT 
 .text-center {
     text-align: center !important;
 }
@@ -124,6 +143,7 @@ span, p, h1, h2, h3, h4, h5 {
     font-size: 42px !important;
 }
 
+//CURSOR
 .pointer {
     cursor: pointer !important;
 }
@@ -132,21 +152,10 @@ span, p, h1, h2, h3, h4, h5 {
     cursor: default !important;
 }
 
+//IMAGE
 .error-image {
     width: 124px !important;
     height: 124px !important;
-}
-
-.mt-5 {
-    margin-top: 5px !important;
-}
-
-.h-420p {
-    height: 420px !important;
-}
-
-.h-300p {
-    height: 300px !important;
 }
 
 @keyframes skeleton {
