:art: details feat(Details) Movies and series details

--- a/src/app/pages/movies/views/movie-details/movie-details.component.html
+++ b/src/app/pages/movies/views/movie-details/movie-details.component.html
@@ -88,7 +88,7 @@
          ngClass.lt-md="movies-similar-xs">
         <h3 ngClass="text-22"
             ngClass.xs="text-18">
-            Movies similar
+            Similar movies
         </h3>
         <app-carousel [movies]="movies"
                       [mouseover]="false"
