--- a/src/app/pages/movies/views/movie-details/movie-details.component.scss
+++ b/src/app/pages/movies/views/movie-details/movie-details.component.scss
@@ -152,11 +152,11 @@
         border-radius: 100% !important;
 
         &:hover {
-            background-color: rgba(13, 37, 63, 0.376);
+            background-color: rgba(1, 179, 228, 0.377);
             transition: all ease-in-out .5ms;
 
             .add{
-                color: #0d253f !important;
+                color: #01b4e4 !important;
                 transition: all ease-in-out .5ms;
             }
         }
@@ -169,10 +169,10 @@
         width: 35px !important;
         height: 35px !important;
         border-radius: 100% !important;
-        background-color: rgba(13, 37, 63, 0.376);
+        background-color: rgba(1, 179, 228, 0.377);
 
         .mat-icon {
-            color: #0d253f !important;
+            color: #01b4e4 !important;
             width: 24px !important;
             height: 24px !important;
             font-size: 24px !important;
@@ -183,7 +183,7 @@
     .add{
         width: 24px !important;
         height: 24px !important;
-        color: rgba(13, 37, 63, 0.6) !important;
+        color: rgba(1, 179, 228, 0.377) !important;
         font-size: 24px !important;
         cursor: pointer;
     }
