--- a/src/app/pages/movies/views/tv-series-details/tv-series-details.component.html
+++ b/src/app/pages/movies/views/tv-series-details/tv-series-details.component.html
@@ -98,7 +98,7 @@
          ngClass.lt-md="movies-similar-xs">
         <h3 ngClass="text-22"
             ngClass.xs="text-18">
-            Movies similar
+            Similar series
         </h3>
         <app-carousel [movies]="movies"
                       [mouseover]="false"
